  game in HDR mode.
* Added bloom effect, which can be toggled on/off with F9 key.
* Oolite now renders to a framebuffer, which enables post-processing effects, 
  as well as full scene ACES tonemapping and gamma correction, before sending 
  screen to be displayed.
* Added new visual effect when cloaked.
* Added colourblind support, available in game options screen.
* Full keyboard configuration now available in game.
* In-game handling of non-US keyboard layouts.
* Added ability to assign any key or joystick button to the "activate" or 
  "mode" functions of primable equipment.
* Added ability to define any key combination for use on a mission screen.
* Added ability to check for any key combination on any standard GUI screen.
* Updated icon and splash screen.
* Default game window size now 1280x720 (16:9).
* (Windows build) Windows light/dark modes now honoured by the game window.
* Updated Joystick mapping screens to have a more logical arrangement, and
  added some sub-titles to differentiate sections.
* Switched to a new domain for the Expansion Pack Manager.
* Added a "fade to black and white" effect on game over.
* Added "sky-color-correction" to GNUstepdefaults file to all for filmic tone 
  mapping to be applied to stars and nebula. 0 = no color correction, 1 = gamma
  correction only, any other value = gamma correction + filmic tone mapping.
* Change descriptions of the "fast activate" keys to be easier to understand.
* Added "start-script-limit-value" option to GNUstepdefaults file for control
  over startUp script time limit.
* Brightened up lasers.
* Improved sun rendering.
* Implemented user-defined planet dark-side illumination color, when an
  illumination map is in use.
* Added an "update all" option to the Expansion Pack Manager.
* Updated atmosphere density rendering.
* Added game paused message to game options when in flight.
* (Windows/Linux) Physical and available system memory now reported in log header.